# fw-sign

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CODEOWNERS  LICENSE  README.md  cmake-tooks-kits.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-ut-fwsign.yml  build-fwsign.yml  code-analysis.yml  cppcheck.yml  daily-tests.yml  run-fwsign-unit-tests.yml  style-conformance.yml
config/: mtl.toml
include/: CMakeLists.txt
include/fwsign/: TomlReader.hpp  World.hpp
src/: CMakeLists.txt  TomlReader.cpp  World.cpp  main.cpp
test/: CMakeLists.txt
test/include/: CMakeLists.txt
test/include/fwsign/test_utils/: FileHandler.hpp
test/include/fwsign/unit_test/: TomlReaderTestFixture.hpp
test/src/: CMakeLists.txt  HelloTest.cpp
test/src/test_utils/: FileHandler.cpp
test/src/unit_test/: HelloTest.cpp  TomlReaderTest.cpp
tests/src/: HelloTest.cpp
